# hyphen0

./: .gitignore  LICENSE  README.md
examples/hyphen-chat/: README.md  chat_client.py  chat_packets.py  chat_server.py  requirements.txt
hyphen0/: client.py  main.py  server.py  setup.py  test.py
hyphen0-python/: main.py  pyproject.toml  server.py
hyphen0-python/client_gui/: __init__.py  __main__.py  client.py
hyphen0-python/client_gui/widgets/: message.py
hyphen0-python/hyphen0/: client.py  exceptions.py  server.py
hyphen0-python/hyphen0/encryption/: aes.py  aes256.py
hyphen0-python/hyphen0/packets/: __init__.py  handshake.py
hyphen0-python/hyphen0/primitives/: basic.py
hyphen0-python/hyphen0/socket/: __init__.py  basicsocket.py  cryptsocket.py  protosocket.py  steganosocket.py
hyphen0-python/hyphen0/stegano/: __init__.py  _layer.py  http.py  tls.py
hyphen0-python/hyphen0/zerotrust/: _layer.py
hyphen0-python/tests/: test_sockets.py  test_stegano.py  test_steganolayers.py  test_svclient.py  test_zerotrust.py
hyphen0/client_gui/: client.py
hyphen0/client_gui/screens/: connect.py
hyphen0/hyphen0/: client.py  server.py
hyphen0/hyphen0/packets/: packet.py
hyphen0/hyphen0/primitives/: _serialisable.py  basic.py
hyphen0/hyphen0/socket/: basicsocket.py  protosocket.py
hyphen0/hyphen0/zerotrust/: wrapper.py
hyphen0/protocol/: client.py  exceptions.py  server.py
hyphen0/protocol/encryption/: _crypter.py  aes256.py
hyphen0/protocol/packets/: chat.py  handshake.py  packet.py
hyphen0/tests/: __init__.py  test_zerotrust.py
(+6 files in other folders)
